# unpm

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  action.yml  flake.nix  install.sh  release-please-config.json
.config/tracey/: config.styx
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/adrs/: 2026-03-08-unpm-architecture.md  2026-03-12-multi-file-deps.md  2026-03-14-tracey-specs.md  2026-03-17-install-script.md
docs/design/: 2026-03-08-unpm-design.md  2026-03-14-tracey-specs-design.md  2026-03-16-github-ref-resolution.md
docs/impl/: 2026-03-08-unpm-implementation.md  2026-03-12-multi-file-deps.md  2026-03-14-tracey-specs.md  2026-03-16-github-ref-resolution.md
docs/plans/: 2026-03-08-unpm-design.md  2026-03-08-unpm-implementation.md
docs/specs/: 2026-03-12-multi-file-deps-design.md  add.md  check.md  config.md  install.md  list.md  lockfile.md  manifest.md  outdated.md  remove.md  update.md
docs/superpowers/specs/: 2026-03-17-install-script-design.md
src/: cli.rs  config.rs  cve.rs  fetch.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  registry.rs  url.rs  vendor.rs
src/commands/: add.rs  check.rs  install.rs  list.rs  mod.rs  outdated.rs  remove.rs  update.rs
tests/: config_test.rs  cve_test.rs  e2e.rs  fetch_test.rs  lockfile_test.rs  manifest_test.rs  registry_test.rs  vendor_test.rs
