[package]
name = "unpm"
version = "0.1.0"
edition = "2024"
description = "Lightweight vendoring of static assets. No node_modules, no runtime fetching."

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
dialoguer = "0.11"
indicatif = "0.17"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
semver = "1"
futures = "0.3"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3"
